app/src/main/java/com/example/bookclub/errors/StudyNotInOpenStateException.java
package com.example.bookclub.errors;

public class StudyNotInOpenStateException extends RuntimeException {
	public StudyNotInOpenStateException() {
		super("Study is not in open state");
	}
}
